# lilconfig

./: CHANGELOG.md  Cargo.toml  README.md
src/: core.rs  error.rs  fs.rs  lib.rs  loaders.rs  options.rs
tests/: api_surface.rs  cache.rs  content.rs  default_search_places.rs  errors.rs  load.rs  package_prop.rs  path_regressions.rs  realfs.rs  search.rs  transform.rs
tests/common/: mod.rs
tests/fixtures/load/: foo.config.json
tests/fixtures/search/: cached.config.json
tests/fixtures/search/a/: maybeEmpty.config.json
tests/fixtures/search/a/b/: searchPlaces.conf.json
